# src/api/serializers/task.py
@@ -7,3 +7,9 @@ class TaskSerializer(serializers.ModelSerializer):
     class Meta:
         model = Task
         exclude = ("is_archived",)
+
+
+class TaskUpdatePositionSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = Task
+        fields = ("position",)
