# src/api/services/task.py
@@ -1,0 +1,5 @@
+from core.models import Task
+
+
+def register_task_update_position(task: Task, position: float):
+    pass
