# src/core/models/task.py
@@ -24,7 +24,7 @@ class AllTaskManager(models.Manager):
 class Task(BaseModelMixin):
     title = models.CharField(max_length=255)
     description = models.TextField(blank=True, null=True)
-    position = models.PositiveIntegerField(default=0)
+    position = models.FloatField(default=0.0)
     column = models.ForeignKey(Column, on_delete=models.CASCADE, related_name="tasks")
     estimated_time = models.FloatField(help_text="in minutes", blank=True, null=True)
     is_archived = models.BooleanField(default=False)
