# swagger.json
@@ -368,6 +368,43 @@
           "type": "integer"
         }
       ]
+    },
+    "/task/{id}/update-position/": {
+      "patch": {
+        "operationId": "task_update_position",
+        "summary": "\u0411\u0435\u0440\u0435\u043c \u0442\u0430\u0441\u043a\u0443 \u0441\u0432\u0435\u0440\u0445\u0443, \u0442\u0430\u0441\u043a\u0443 \u0441\u043d\u0438\u0437\u0443, \u0441\u043a\u043b\u0430\u0434\u044b\u0432\u0430\u0435\u043c \u0438\u0445 \u043f\u043e\u0437\u0438\u0446\u0438\u0438 \u0438 \u0434\u0435\u043b\u0438\u043c \u043f\u043e\u043f\u043e\u043b\u0430\u043c. \u041f\u043e\u043b\u0443\u0447\u0438\u0432\u0448\u0435\u0435\u0441\u044f \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u0435 \u043e\u0442\u043f\u0440\u0430\u0432\u043b\u044f\u0435\u043c \u0432 \u044d\u0442\u043e\u0442 \u044d\u043d\u0434\u043f\u043e\u0438\u043d\u0442",
+        "description": "",
+        "parameters": [
+          {
+            "name": "data",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/TaskUpdatePosition"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/TaskUpdatePosition"
+            }
+          }
+        },
+        "tags": [
+          "task"
+        ]
+      },
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "description": "A unique integer value identifying this task.",
+          "required": true,
+          "type": "integer"
+        }
+      ]
     }
   },
   "definitions": {
@@ -399,9 +436,66 @@
         }
       }
     },
+    "Task": {
+      "required": [
+        "title",
+        "column"
+      ],
+      "type": "object",
+      "properties": {
+        "id": {
+          "title": "ID",
+          "type": "integer",
+          "readOnly": true
+        },
+        "created_at": {
+          "title": "Created at",
+          "type": "string",
+          "format": "date-time",
+          "readOnly": true
+        },
+        "modified_at": {
+          "title": "Modified at",
+          "type": "string",
+          "format": "date-time",
+          "readOnly": true
+        },
+        "title": {
+          "title": "Title",
+          "type": "string",
+          "maxLength": 255,
+          "minLength": 1
+        },
+        "description": {
+          "title": "Description",
+          "type": "string",
+          "x-nullable": true
+        },
+        "position": {
+          "title": "Position",
+          "type": "number"
+        },
+        "estimated_time": {
+          "title": "Estimated time",
+          "description": "in minutes",
+          "type": "number",
+          "x-nullable": true
+        },
+        "created_by": {
+          "title": "Created by",
+          "type": "integer",
+          "readOnly": true
+        },
+        "column": {
+          "title": "Column",
+          "type": "integer"
+        }
+      }
+    },
     "ColumnTasks": {
       "required": [
-        "title"
+        "title",
+        "tasks"
       ],
       "type": "object",
       "properties": {
@@ -421,9 +515,10 @@
           "type": "integer"
         },
         "tasks": {
-          "title": "Tasks",
-          "type": "string",
-          "readOnly": true
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Task"
+          }
         }
       }
     },
@@ -471,7 +566,8 @@
     },
     "Project": {
       "required": [
-        "title"
+        "title",
+        "columns"
       ],
       "type": "object",
       "properties": {
@@ -487,65 +583,19 @@
           "minLength": 1
         },
         "columns": {
-          "title": "Columns",
-          "type": "string",
-          "readOnly": true
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Column"
+          }
         }
       }
     },
-    "Task": {
-      "required": [
-        "title",
-        "column"
-      ],
+    "TaskUpdatePosition": {
       "type": "object",
       "properties": {
-        "id": {
-          "title": "ID",
-          "type": "integer",
-          "readOnly": true
-        },
-        "created_at": {
-          "title": "Created at",
-          "type": "string",
-          "format": "date-time",
-          "readOnly": true
-        },
-        "modified_at": {
-          "title": "Modified at",
-          "type": "string",
-          "format": "date-time",
-          "readOnly": true
-        },
-        "title": {
-          "title": "Title",
-          "type": "string",
-          "maxLength": 255,
-          "minLength": 1
-        },
-        "description": {
-          "title": "Description",
-          "type": "string",
-          "x-nullable": true
-        },
         "position": {
           "title": "Position",
-          "type": "integer"
-        },
-        "estimated_time": {
-          "title": "Estimated time",
-          "description": "in minutes",
-          "type": "number",
-          "x-nullable": true
-        },
-        "created_by": {
-          "title": "Created by",
-          "type": "integer",
-          "readOnly": true
-        },
-        "column": {
-          "title": "Column",
-          "type": "integer"
+          "type": "number"
         }
       }
     }
